<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Doctor\'s KP</string>
    <string name="loginActivityLabel">Login</string>
    <string name="loginHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="enter">Вход</string>
    <string name="signInFail">Логин или пароль введены неверно</string>
    <string name="drawerMenuTitle1">Список пациентов</string>
    <string name="drawerMenuTitle2">Лента событий</string>
    <string name="drawerMenuTitle3">Тревога</string>
    <string name="nav_header_stub">Doctor\'s status</string>
    <string name="nav_header_email_stub">example@yandex.ru</string>
    <string name="drawerOpen">Drawer is opened</string>
    <string name="drawerClose">Drawer is closed</string>
    <string name="title_feed">Лента событий</string>
    <string name="title_alarm">Тревога</string>
    <string name="title_patients_list">Список пациентов</string>
    <string name="patient_profile">Профиль</string>
    <string name="patient_ecg_list">ЭКГ</string>
    <string name="text_stub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</string>
    <string name="added_new_patient">Был добавлен новый пациент:</string>
    <string name="OK">OK</string>
    <string name="ecg_records_dialog_header">Список ЭКГ</string>
    <string name="cancel">Отменить</string>
    <string name="patient_ecg_info">Информация:</string>
    <string name="stub_ecg_info">На учёте не состоит</string>
    <string name="ecg_analysis_header">Анализ:</string>
    <string name="ecg_analysis_stub">Желудочковый ритм(удар/мин): хх \n Интервал PR(мс): хх \n Интервал P/QRS/T(мс): хх \n Интервал QT/QTC(мс): хх \n Ось P/QRS/T(град): хх \n Амплитуда RV5/SV1(мВ): хх \n</string>
    <string name="ecg_activity_title">Просмотр ЭКГ записи</string>
    <string name="profile_title">Профиль пациента</string>
</resources>
