<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            android:layout_above="@+id/tvHeader"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textStyle="italic|bold"
            android:textSize="@dimen/sp30"
            android:layout_gravity="center"
            android:layout_above="@+id/tilLogin"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLogin"
            android:layout_width="@dimen/dp270"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme.Login"
            style="@style/TextInputLayoutFix"
            app:hintTextAppearance="@style/LoginTILHint"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_til_hint"
                android:hint="@string/loginHint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="@dimen/dp270"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/TextInputLayoutFix"
            android:theme="@style/AppTheme.Login"
            app:hintTextAppearance="@style/LoginTILHint"
            android:layout_gravity="center"
            android:layout_below="@id/tilLogin"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_til_hint"
                android:hint="@string/passwordHint"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_login"
            android:textColor="@android:color/black"
            android:text="@string/enter"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/tilPassword"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark_half_opacity"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/pbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@android:color/white"
            android:indeterminateTintMode="src_in"/>
    </RelativeLayout>

</FrameLayout>