<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view='http://schemas.android.com/apk/res-auto'
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dp8"
    card_view:cardCornerRadius="@dimen/dp2"
    card_view:cardElevation="@dimen/dp2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:src="@drawable/ic_user"/>

        <LinearLayout
            android:id="@+id/llTextArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/ivUser"
            android:layout_toStartOf="@+id/ivUser">
            <TextView
                android:id="@+id/tvUserNameSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Petr Ivanov"
                style="@style/CardView.TitleText"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stub"
                style="@style/CardView.SubText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp8"
            android:layout_below="@+id/llTextArea">
            <Button
                android:id="@+id/btnPatientProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp8"
                android:text="@string/patient_profile"/>
            <Button
                android:id="@+id/btnPatientEcg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_ecg_list"/>
        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>